<resources>
    <string name="app_name">펫아이디</string>
    <string name="notification_channel_id">PetIdChannelId</string>
    <string name="notification_channel_name">PetId</string>
    <string name="social_login_info_naver_client_name">네이버 아이디 로그인</string>
    <string name="next">다음</string>
    <string name="confirm">확인</string>
    <string name="start">시작하기</string>
    <string name="last">마지막</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="male_initial">M</string>
    <string name="female_initial">F</string>
    <string name="Y">Y</string>
    <string name="N">N</string>
    <string name="main_home">홈</string>
    <string name="main_hospital">등록대행병원</string>
    <string name="main_blog">펫블로그</string>
    <string name="main_my">my</string>
    <string name="search">검색</string>
    <string name="type">품종</string>
    <string name="feature">특징</string>
    <string name="photo">사진</string>
    <string name="petid_info">펫아이디 정보</string>
    <string name="hair_color">털 색깔</string>
    <string name="weight">몸무게</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="birth">생일</string>
    <string name="place">장소</string>
    <string name="noon">오전</string>
    <string name="afternoon">오후</string>
    <string name="update">수정</string>
    <string name="like">좋아요</string>
    <string name="share">공유하기</string>
    <string name="to_owner">보호자 %s</string>
    <string name="neutering">중성화 %s</string>
    <string name="to_kg">%.1fkg</string>
    <string name="to_age">%d살</string>
    <string name="to_vet">%s 원장</string>
    <string name="common_dialog_petid_null">회원님과 반려동물 정보를\n먼저 등록해주세요!</string>
    <string name="splash_desc">반려동물의 특별함을 담은\n단 하나의 아이디</string>
    <string name="permission_main_title">접근성 설정 안내</string>
    <string name="permission_main_desc">PET ID 고객님의 편리한 앱 이용을 위해 다음의\n접근권한 허용이 필요합니다</string>
    <string name="permission_title_1">[필수] 기기 및 앱 기록</string>
    <string name="permission_title_1_span">[필수]</string>
    <string name="permission_subtitle_1">앱 서비스 최적화 및 오류 확인</string>
    <string name="permission_title_2">[선택] 카메라</string>
    <string name="permission_subtitle_2">사진 촬영</string>
    <string name="permission_title_3">[선택] 사진첩</string>
    <string name="permission_subtitle_3">사진 저장</string>
    <string name="permission_title_4">[선택] 알림</string>
    <string name="permission_subtitle_4">이벤트와 혜택 알림</string>
    <string name="permission_title_5">[선택] 위치</string>
    <string name="permission_subtitle_5">동물 등록 이용 시 가까운 병원 찾기</string>
    <string name="permission_info_title">접근권한 변경 방법</string>
    <string name="permission_info_desc">설정 > 애플리케이션 관리자 > PETID</string>
    <string name="permission_info_desc2">선택적 접근권한은 동의하지 않아도 해당기능 외 앱 이용이 가능합니다.</string>
    <string name="intro_1_title">손안에 담긴\n특별한 카드</string>
    <string name="intro_1_desc">모바일 펫 카드에서\n반려동물 정보를 쉽게 볼 수 있어요</string>
    <string name="intro_2_title">반려동물과의 첫걸음\n안전한 등록</string>
    <string name="intro_2_desc">내 주변 등록대행 병원 확인하고\n간편 예약해 보세요</string>
    <string name="intro_3_title">AI 인식\n간편 정보입력</string>
    <string name="intro_3_desc">반려동물 사진으로\n빠르게 정보를 작성해 보세요</string>
    <string name="terms_activity_title">펫아이디 서비스\n이용 약관에 동의해 주세요.</string>
    <string name="terms_activity_title_span">이용 약관에 동의</string>
    <string name="terms_agree_all">약관 전체동의</string>
    <string name="terms_agree_all_necessary">약관 전체동의(필수)</string>
    <string name="terms_agree_personal_info">개인정보 수집 및 이용동의(필수)</string>
    <string name="terms_agree_ads">광고성 정보 수신동의(선택)</string>
    <string name="terms_agree_ads_desc">다양한 혜택과 신규 소식을 보내드립니다.</string>
    <string name="signup_complete_title">로그인이\n완료되었습니다.</string>
    <string name="social_auth_activity_title">간편하게 로그인하고\n펫아이디를 사용해보세요.</string>
    <string name="social_auth_acitivity_sub_title">1분이면 회원가입이 완료됩니다!</string>
    <string name="social_auth_acitivity_sub_title_span">1분</string>
    <string name="social_auth_naver">네이버로 계속하기</string>
    <string name="social_auth_kakao">카카오로 계속하기</string>
    <string name="social_auth_google">Google로 계속하기</string>
    <string name="social_auth_apple">Apple로 계속하기</string>
    <string name="problem_social_auth">로그인에 문제가 있나요?</string>
    <string name="restore_dialog_title">다시돌아오셨군요!\n계정을 복구할 준비가 되었습니다</string>
    <string name="restore_dialog_desc">30일 이내 재가입 하여 계정 복구가 가능합니다</string>
    <string name="restore_dialog_yes">복구하기</string>
    <string name="success_restore">계정이 복구되었습니다.\n다시 로그인해주세요.</string>
    <string name="home_no_petid">펫 아이디를 만들어보세요.</string>
    <string name="check_list_info_sub_title">반려동물과 나가기 전 체크하세요!</string>
    <string name="check_list_info_title">외출 체크리스트 확인하기</string>
    <string name="info_create_petid_sub_title">반려동물을 지키는\n가장 확실한 방법이에요.</string>
    <string name="info_create_petid_title">펫 아이디 만들고\n간편하게 등록해보세요.</string>
    <string name="info_create_petid_title_span">펫 아이디</string>
    <string name="info_create_petid_desc">펫 아이디\n카드</string>
    <string name="do_register_petid">지금 반려동물을 등록하세요</string>
    <string name="flip_card_front_side">앞면보기</string>
    <string name="flip_card_back_side">뒷면보기</string>
    <string name="life_style_recommend_title">🐶 반려 정보 tip</string>
    <string name="pet_info_input_activity_title">반려동물의 정보를\n입력해주세요.</string>
    <string name="pet_info_input_activity_title_span">반려동물의 정보</string>
    <string name="address_confirm">주소를 확인해 주세요</string>
    <string name="notification_title">알림</string>
    <string name="notification_no_data">알림내역이 없습니다.</string>
    <string name="petid_generate_step_1_title">펫 아이디 만들기를\n시작합니다</string>
    <string name="petid_generate_step_1_subtitle">회원님의 상태를 선택하세요</string>
    <string name="petid_generate_step_1_button_1">반려동물 등록을 하지 않았어요</string>
    <string name="petid_generate_step_1_button_2">외장칩 등록이 되어있어요</string>
    <string name="petid_generate_step_1_button_3">내장칩 등록이 되어있어요</string>
    <string name="petid_generate_step_2_title">회원님의 정보를\n알려주세요</string>
    <string name="user_name">보호자 이름</string>
    <string name="name_hint">이름을 입력해 주세요.</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="phone_number_hint">숫자만 입력해 주세요.</string>
    <string name="address">주소</string>
    <string name="address_hint">주소를 검색해 주세요.</string>
    <string name="address_detail_hint">상세주소를 입력해주세요.</string>
    <string name="address_is_same">현 거주지와 주민등록상 주소가 동일해요.</string>
    <string name="petid_generate_step_3_title">반려동물의 정보를\n알려주세요</string>
    <string name="pet_name">반려동물 이름</string>
    <string name="birthday">생년월일</string>
    <string name="birthday_hint">생년월일 선택</string>
    <string name="neutering_date">중성화 날짜</string>
    <string name="neutering_date_hint">중성화 날짜 선택</string>
    <string name="neutering_status">중성화 전이에요.</string>
    <string name="petid_generate_step_4_title">반려동물\n사진 촬영을 시작할게요</string>
    <string name="petid_generate_step_4_notice_1">\u2022 사진을 촬영하면 AI가 자동으로 반려동물의\n주요 특징을 인식합니다.</string>
    <string name="petid_generate_step_4_notice_2">\u2022 촬영된 사진은 펫 카드 제작에 사용됩니다.\n재촬영을 원하실 경우, 다시 촬영 가능합니다.</string>
    <string name="pet_photo_activity_desc">가이드에 맞춰서 촬영해 주세요!</string>
    <string name="pet_photo_activity_start_taking_a_photo">촬영 시작</string>
    <string name="pet_photo_activity_dialog_retry_title">반려동물을 인식할 수 없어요. 다시 시도해 주세요!</string>
    <string name="petid_generate_step_5_title">반려동물 정보를 가져왔어요!</string>
    <string name="petid_generate_step_5_subtitle">잘못된 정보는 수정할 수 있어요</string>
    <string name="petid_generate_step_5_dialog">이전 화면으로 돌아가면 현재 사진은 삭제됩니다. 진행하시겠습니까?</string>
    <string name="petid_generate_step_6_title">아래 내용으로\n펫 아이디를 만들게요</string>
    <string name="petid_generate_step_6_subtitle">실제 정보와 다를 시 반려동물 등록을 할 수 없어요</string>
    <string name="petid_generate_step_7_title">마지막으로\n서명을 해주세요</string>
    <string name="petid_generate_step_7_subtitle">반려동물등록 신청에 서명이 필요해요</string>
    <string name="petid_generate_step_7_signature_desc">서명 또는 사인을 해주세요</string>
    <string name="petid_generate_complete_title">펫 아이디 카드를\n확인해 보세요!</string>
    <string name="petid_generate_complete_desc">회원님이 알려준 정보로 카드를 만들었어요!</string>
    <string name="main_hospital_title">병원 예약</string>
    <string name="sido_title">시/도</string>
    <string name="sigungu_title">시/군/구</string>
    <string name="eupmundong_title">읍/면/동</string>
    <string name="filter_by_location">가까운 순</string>
    <string name="filter_by_name">이름 순</string>
    <string name="no_filter">전체</string>
    <string name="hospital_make_reservation">방문 날짜/시간 예약하기</string>
    <string name="hospital_make_reservation_dialog_info">동물병원 방문 시\n외장칩 번호를 알려주세요</string>
    <string name="hospital_make_reservation_dialog_info_button">확인했습니다</string>
    <string name="hospital_reservation_calendar_title">yyyy년 MM월</string>
    <string name="hospital_reservation_calendar_visit_date_time">방문일시</string>
    <string name="hospital_reservation_calendar_visit_date_time_desc">오늘을 제외한 7일 이내의 날짜만 선택 가능합니다.</string>
    <string name="hospital_reservation_calendar_available_time">예약가능시간</string>
    <string name="hospital_reservation_calendar_default">예약가능 시간</string>
    <string name="hospital_reservation_calendar_default_desc">날짜를 먼저 선택해주세요</string>
    <string name="hospital_reservation_calendar_day_off">동물병원 휴일</string>
    <string name="hospital_reservation_calendar_day_off_desc">휴일에는 서비스를 운영하지 않아요.\n다른 날짜를 확인해 주세요!</string>
    <string name="hospital_complete_reservation">예약 완료하기</string>
    <string name="hospital_process_finish_title">동물병원에서 예약을\n확인하고 있어요!</string>
    <string name="hospital_process_finish_subtitle">예약 확정은 알림으로 알려드려요</string>
    <string name="hospital_process_finish_dialog_title">동물병원 예약 정보를 알려드려요</string>
    <string name="hospital_process_finish_dialog_button">알림 설정하기</string>
    <string name="hospital_complete_reservation_title">예약 확정되었습니다!</string>
    <string name="hospital_complete_reservation_title_span">예약 확정</string>
    <string name="hospital_complete_reservation_subtitle">예약 내용은 MY > 예약 내역에서 확인할 수 있습니다.</string>
    <string name="hospital_complete_reservation_info">예약 정보는 방문 전에 다시 알려드려요!</string>
    <string name="reservation_date_time">예약일시</string>
    <string name="main_my_title">my</string>
    <string name="update_my_info">내 정보 수정하기</string>
    <string name="pet_info_title">반려동물 정보</string>
    <string name="reservation_history_title">예약 내역</string>
    <string name="terms_agree_info_title">서비스 이용약관</string>
    <string name="personal_service_info_title">개인정보 처리방침</string>
    <string name="notice_title">공지사항</string>
    <string name="qna_title">자주하는 질문</string>
    <string name="withdraw_title"><u>탈퇴하기</u></string>
    <string name="logout_title"><u>로그아웃</u></string>
    <string name="app_version">앱 버전 </string>
    <string name="my_info_title">내 정보</string>
    <string name="update_my_info_title">내 정보 수정</string>
    <string name="no_register">미등록 상태</string>
    <string name="update_complete">수정 완료</string>
    <string name="update_complete_dialog">수정 내용을 저장할까요?</string>
    <string name="pet_create_status">반려동물 등록</string>
    <string name="pet_info_update_title">반려동물 정보 수정</string>
    <string name="pet_info_id_null"><u>미등록 상태</u> ></string>
    <string name="pet_info_id_has_data">등록 완료</string>
    <string name="tab_all_title">전체</string>
    <string name="tab_about_pet_title">어바웃펫</string>
    <string name="tab_tips_title">반려TIP</string>
    <string name="tab_venue_title">장소</string>
    <string name="tab_support_title">지원</string>
    <string name="tab_no_data">준비중입니다</string>
    <string name="pet_info_dialog_chip_na_title">반려 동물 등록은 왜 해야할까?</string>
    <string name="pet_info_dialog_chip_na_desc1_1">혹시 알고 계셨나요?</string>
    <string name="pet_info_dialog_chip_na_desc1_2">한국에는 매년 11만 마리 이상의\n반려동물이 길을 잃거나 버려지고 있어요.</string>
    <string name="pet_info_dialog_chip_na_desc2_1">내 반려동물을 안전하게 지키는 가장\n쉬운 방법은 바로 반려동물 등록이에요.</string>
</resources>