<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.view.my.MyInfoUpdateFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="33dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/petid_gray"
            android:textSize="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14dp"
            android:textFontWeight="400"
            android:textColor="@color/petid_title"
            android:textColorHint="@color/b4"
            android:paddingEnd="18dp"
            android:drawableTint="#2E2E2E"
            android:enabled="false"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/petid_gray"
            android:textSize="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:hint="@string/phone_number_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14dp"
            android:textFontWeight="400"
            android:textColor="@color/petid_title"
            android:textColorHint="@color/b4"
            android:paddingEnd="18dp"
            android:drawableTint="#2E2E2E"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/petid_gray"
            android:textSize="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:hint="@string/address_hint"
            android:inputType="text"
            android:focusable="false"
            android:singleLine="true"
            android:textSize="14dp"
            android:textFontWeight="400"
            android:textColor="@color/petid_title"
            android:textColorHint="@color/b4"
            android:drawableEnd="@drawable/ic_search"
            android:paddingEnd="18dp"
            android:drawableTint="@color/petid_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_address_detail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="27dp"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:hint="@string/address_detail_hint"
            android:inputType="text"
            android:textSize="14dp"
            android:paddingEnd="17.96dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_phone"
            app:layout_constraintStart_toStartOf="@+id/edit_text_phone"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_phone"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_complete"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/update_complete"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:textColor="@color/button_text_color_common"
        style="@style/GenerateCommonButtonStyle" />

</LinearLayout>
