<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.view.my.PetInfoUpdateFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="33dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="37dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:textColor="@color/petid_title"
                android:textColorHint="@color/b4"
                android:paddingEnd="18dp"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_birth"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="@string/birthday_hint"
                android:focusable="false"
                android:singleLine="true"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:textColor="@color/petid_title"
                android:textColorHint="@color/b4"
                android:paddingEnd="18dp"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neutering_date"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_neutering_date"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:hint="@string/neutering_date_hint"
                android:focusable="false"
                android:singleLine="true"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:textColor="@color/petid_title"
                android:textColorHint="@color/b4"
                android:paddingEnd="18dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawableTint="@color/petid_underbar"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feature"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_feature"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:focusable="false"
                android:singleLine="true"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:textColor="@color/petid_title"
                android:textColorHint="@color/b4"
                android:paddingEnd="18dp"
                android:enabled="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_weight"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/edittext_rounded_corner_rectangle"
                android:focusable="false"
                android:singleLine="true"
                android:textSize="14sp"
                android:textFontWeight="400"
                android:textColor="@color/petid_title"
                android:textColorHint="@color/b4"
                android:paddingEnd="18dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_create_status"
                android:textColor="@color/petid_gray"
                android:textSize="14sp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no_register"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="17dp"
                android:drawableRight="@drawable/ic_right_arrow_2"
                android:background="@drawable/solid_f5f5f5_radius_10"
                android:text="@string/no_register"
                android:textSize="16sp"
                android:textColor="@color/petid_title"
                android:textFontWeight="400"
                android:stateListAnimator="@null"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_complete"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/update_complete"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:textColor="@color/button_text_color_common"
        android:stateListAnimator="@null"
        style="@style/GenerateCommonButtonStyle" />

</LinearLayout>